# sangfroid

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  setup.py
bywords/: adjust.py
docs/: animation.md  api.md  conf.py  examples.md  from-test  index.md  layer.md  layers.xcf  requirements.in  requirements.txt  t.md  usage.md  value.md
docs/_static/: sangfroid.css
docs/bywords/: README.md  and-layer.xcf
docs/examples/: colours.sif  french.py  stroop.py
etc/: get-symbols.py  layer-details.json  pick-and-mix-to-layers.py  scan-synfig-source.py
sangfroid/: __init__.py  animation.py  field.py  format.py  keyframe.py  registry.py  sif.py  t.py  time.py  util.py  utils.py  value.py
sangfroid/layer/: __init__.py  blendmethod.py  blurs.py  field.py  geometry.py  group.py  layer.py  other.py  stylise.py  tbd.py  text.py  time.py  transform.py
sangfroid/template/: __main__.py  replacer.py
sangfroid/value/: __init__.py  blendmethod.py  canvas.py  color.py  complex.py  gradient.py  other.py  simple.py  string.py  tbd.py  transformation.py  value.py  vector.py
test/: __init__.py  bouncing.sif  circles.sif  pick-and-mix.sif  purple-circles.sif  purple-wombats.sifz  test_animation.py  test_group.py  test_layer.py  test_load.py  test_sif.py  test_t.py  test_time.py  test_utils.py  test_value.py  test_waypoint.py  wombats.sifz
test/bywords/: sing-like-a-girl.sif  sing-like-a-girl.srt  test_bywords.py
test/field/: test_notimplemented.py
test/value/: test_angle.py  test_color.py  test_gradient.py  test_simple.py  test_string.py  (+3 more)
