[project]
name = "sangfroid"
version = "0.0.1"
authors = [
  { name="Marnanel Thurman", email="marnanel@thurman.org.uk" },
]
description = "Parses Synfig files"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
	"Development Status :: 2 - Pre-Alpha",
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Intended Audience :: Developers",
	"Operating System :: OS Independent",
	"Topic :: Text Processing :: XML",
]
keywords = ["synfig", "synfigstudio", "animation"]

[project.urls]
Homepage = "https://gitlab.com/marnanel/sangfroid"
Repository = "https://gitlab.com/marnanel/sangfroid.git"
Issues = "https://github.com/marnanel/sangfroid/issues"

[build-system]
requires = [
	"beautifulsoup4==4.12.2",
	"lxml==4.9.3",
	"packaging==23.2",
	"pluggy==1.3.0",
	"pytest==7.4.3",
	"setuptools>=61.0",
	"soupsieve==2.5",
	"wheel",
]
build_backend="setuptools.build_meta"

[tool.setuptools]
packages = ["sangfroid"]
